@@ -856,20 +856,11 @@ else {
 
 	    	
 	    $out .= "
-	    	<!--[if !IE]> -->
 	    	<a href='$link' $caption data-thumb='$thumbnail'>
-	    				<img src='$image' width='$imgwidth' alt='Slider' />
+	    				<img src='$image'  alt='Slider' />
 	    						<span class='orbit-caption' id='htmlCaption$i'>$title <br /> $text</span>
 	    				</a>
-	    	<!-- <![endif]-->
-	    	
-	    	<!--[if IE]>
-			<a href='$link' $caption data-thumb='$thumbnail'>
-	    				<img src='$image' alt='Slider' />
-	    						<span class='orbit-caption' id='htmlCaption$i'>$title <br /> $text</span>
-	    				</a>
-			<![endif]-->
-	    			";
+	  	    	";
 
 	    	/* End slide markup */
 	      	$i++;
